crates/toml_edit/tests/snapshots/invalid/local-datetime/feb-29.stderr
TOML parse error at line 1, column 21
  |
1 | "not a leap year" = 2100-02-29T15:15:15
  |                     ^^^^^^^^^^^^^^^^^^^
invalid date, expected day between 01 and 28
